[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.2.1"
utils = { path = "../utils" }

[dev-dependencies]
near-sdk = { version = "5.2.1", features = ["unit-testing"] }
near-workspaces = { version = "0.11.0", features = ["unstable"] }
dotenv = "0.15.0"
tokio = { version = "1.39.2", features = ["full"] }
anyhow = "1.0.86"
k256 = "0.13.3"
serde_json = "1.0.122"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
