[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
near-sdk = "5.2.1"
near-jsonrpc-client = "0.10.1"
near-primitives = "0.23.0"
near-jsonrpc-primitives = "0.23.0"
near-crypto = "0.23.0"
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
utils = { path = "../utils" }
dotenv = "0.15.0"
k256 = "0.13.3"
